# haskell-katas

./: .ghc.environment.aarch64-darwin-9.6.7  .gitignore  LICENSE  Readme.md  haskell-katas.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: haskell-katas-0.1.0.0-inplace.conf  package.cache
src/: Main.hs
src/Katas/DataTypes/: BasicTypes.hs  RecursiveTypes.hs  SumTypes.hs
src/Katas/IO/: BasicIO.hs  FileIO.hs  IOCombinators.hs
src/Katas/Layer1_Fundamentals/: Exercises.hs  PatternMatching.hs
src/Katas/Layer2_Workhorse/: Exercises.hs  Laziness.hs  ListComprehensions.hs  ListLibraryDrills.hs  ListPatterns.hs  PatternMatching.hs
src/Katas/Layer3_Toolkit/: DataStructures.hs
src/Katas/Layer4_Apex/: Abstractions.hs
src/Katas/TypeClasses/: BasicTypeClasses.hs  HigherKinded.hs  NewtypeInstances.hs  TypeApplications.hs
test/: Spec.hs
test/Katas/DataTypes/: BasicTypesSpec.hs  RecursiveTypesSpec.hs  SumTypesSpec.hs
test/Katas/IO/: BasicIOSpec.hs  FileIOSpec.hs  IOCombinatorsSpec.hs
test/Katas/Layer1_Fundamentals/: ExercisesSpec.hs  PatternMatchingSpec.hs
test/Katas/Layer2_Workhorse/: ExercisesSpec.hs  LazinessSpec.hs  ListComprehensionsSpec.hs  ListLibraryDrillsSpec.hs  ListPatternsSpec.hs  PatternMatchingSpec.hs
test/Katas/Layer3_Toolkit/: DataStructuresSpec.hs
test/Katas/Layer4_Apex/: AbstractionsSpec.hs
test/Katas/TypeClasses/: BasicTypeClassesSpec.hs  HigherKindedSpec.hs  NewtypeInstancesSpec.hs  TypeApplicationsSpec.hs
