cabal-version:      3.0
name:               haskell-katas
version:            0.1.0.0
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Katas.Layer1_Fundamentals.PatternMatching
                      Katas.Layer2_Workhorse.ListLibraryDrills
                      Katas.Layer3_Toolkit.DataStructures
                      Katas.Layer4_Apex.Abstractions
           
    build-depends:    base ^>=4.18.0.0,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-katas
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.18.0.0,
        haskell-katas
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite haskell-katas-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    Katas.Layer1_Fundamentals.PatternMatchingSpec
                      Katas.Layer2_Workhorse.ListLibraryDrillsSpec
                      Katas.Layer3_Toolkit.DataStructuresSpec
                      Katas.Layer4_Apex.AbstractionsSpec
                  
    build-depends:
        base ^>=4.18.0.0,
        haskell-katas,
        containers,
        hspec ^>=2.11
    build-tool-depends:
        hspec-discover:hspec-discover ^>=2.11
