cabal-version:      3.0
name:               haskell-katas
version:            0.1.0.0
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Katas.Layer1_Fundamentals.PatternMatching
                      Katas.Layer1_Fundamentals.Exercises
                      Katas.Layer2_Workhorse.ListLibraryDrills
                      Katas.Layer2_Workhorse.ListComprehensions
                      Katas.Layer2_Workhorse.ListPatterns
                      Katas.Layer2_Workhorse.Laziness
                      Katas.Layer2_Workhorse.PatternMatching
                      Katas.Layer4_Apex.Abstractions
                      Katas.DataTypes.RecursiveTypes
                      Katas.DataTypes.SumTypes
                      Katas.DataTypes.BasicTypes
                      -- Katas.TypeClasses.HigherKinded
                      -- Katas.TypeClasses.TypeApplications
                      -- Katas.TypeClasses.NewtypeInstances
                      -- Katas.TypeClasses.BasicTypeClasses
           
    build-depends:    base ^>=4.18.0.0,
                      containers,
                      unordered-containers,
                      text,
                      bytestring,
                      hashable,
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-katas
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.18.0.0,
        haskell-katas
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite haskell-katas-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    Katas.Layer1_Fundamentals.PatternMatchingSpec
                      Katas.Layer1_Fundamentals.ExercisesSpec
                      Katas.Layer2_Workhorse.ListLibraryDrillsSpec
                      Katas.Layer2_Workhorse.ListPatternsSpec
                      Katas.Layer2_Workhorse.ListComprehensionsSpec
                      Katas.Layer2_Workhorse.PatternMatchingSpec
                      Katas.Layer2_Workhorse.LazinessSpec
                      Katas.Layer4_Apex.AbstractionsSpec
                      Katas.DataTypes.BasicTypesSpec
                      Katas.DataTypes.RecursiveTypesSpec
                      Katas.DataTypes.SumTypesSpec
                      -- Katas.TypeClasses.BasicTypeClassesSpec
                      -- Katas.TypeClasses.TypeApplicationsSpec
                      -- Katas.TypeClasses.HigherKindedSpec
                      -- Katas.TypeClasses.NewtypeInstancesSpec
                  
    build-depends:
        base ^>=4.18.0.0,
        haskell-katas,
        containers,
        unordered-containers,
        text,
        hashable,
        bytestring,
        hspec ^>=2.11
    build-tool-depends:
        hspec-discover:hspec-discover ^>=2.11
